--- a/index.html
+++ b/index.html
@@ -267,6 +267,98 @@
             color: var(--danger);
         }
 
+        /* Clickable Stat Card */
+        .stat-card.clickable {
+            cursor: pointer;
+            position: relative;
+        }
+
+        .stat-card.clickable:active {
+            background: var(--bg-tertiary);
+            border-color: var(--accent);
+        }
+
+        .stat-card.clickable::after {
+            content: '🔍';
+            position: absolute;
+            top: 4px;
+            right: 4px;
+            font-size: 10px;
+            opacity: 0.5;
+        }
+
+        /* Analysis Modal */
+        .bar-chart-container {
+            margin-top: 16px;
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
+        }
+
+        .bar-chart-row {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            font-size: 11px;
+        }
+
+        .bar-label {
+            width: 70px;
+            text-align: right;
+            color: var(--text-secondary);
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+        }
+
+        .bar-area {
+            flex: 1;
+            background: var(--bg-tertiary);
+            height: 18px;
+            border-radius: 2px;
+            overflow: hidden;
+            position: relative;
+        }
+
+        .bar-fill {
+            height: 100%;
+            background: var(--accent);
+            border-radius: 2px;
+            transition: width 0.5s ease-out;
+            min-width: 2px;
+        }
+
+        .bar-value {
+            position: absolute;
+            right: 6px;
+            top: 50%;
+            transform: translateY(-50%);
+            font-size: 10px;
+            font-weight: 700;
+            color: var(--text-primary);
+            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+        }
+
+        .analysis-summary {
+            background: var(--bg-tertiary);
+            padding: 12px;
+            border-radius: 4px;
+            margin-bottom: 16px;
+            text-align: center;
+        }
+
+        .analysis-total {
+            font-size: 24px;
+            font-weight: 900;
+            color: var(--text-primary);
+            margin-bottom: 4px;
+        }
+
+        .analysis-sub {
+            font-size: 11px;
+            color: var(--text-muted);
+        }
+
         /* Budget Pace Section */
         .budget-pace-section {
             background: var(--bg-secondary);
@@ -1063,8 +1155,8 @@
                     <div class="stat-label">予算</div>
                     <div class="stat-value accent" id="statBudget">¥0</div>
                 </div>
-                <div class="stat-card">
-                    <div class="stat-label">使用済</div>
+                <div class="stat-card clickable" onclick="openAnalysis()">
+                    <div class="stat-label">使用済 (分析)</div>
                     <div class="stat-value" id="statSpent">¥0</div>
                 </div>
                 <div class="stat-card">
@@ -1185,6 +1277,37 @@
                             onchange="importData(event)">
                     </div>
                     <button class="btn-danger" onclick="resetAll()">全データリセット</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Analysis Modal -->
+    <div class="modal-overlay" id="analysisModal">
+        <div class="modal">
+            <div class="modal-header">
+                <h2>支出詳細分析</h2>
+                <button class="modal-close" onclick="closeAnalysis()">&times;</button>
+            </div>
+            <div class="modal-body">
+                <div class="analysis-summary">
+                    <div class="analysis-sub">今月の合計支出</div>
+                    <div class="analysis-total" id="analysisTotal">¥0</div>
+                    <div class="analysis-sub" id="analysisPercent">予算比: 0%</div>
+                </div>
+
+                <div class="modal-section">
+                    <h3>カテゴリ別上位</h3>
+                    <div class="bar-chart-container" id="categoryRankingChart">
+                        <!-- Chart content injected by JS -->
+                    </div>
+                </div>
+
+                <div class="modal-section">
+                    <h3>直近の支出推移</h3>
+                    <div class="bar-chart-container" id="dailyTrendChart">
+                        <!-- Chart content injected by JS -->
+                    </div>
                 </div>
             </div>
         </div>
@@ -1333,7 +1456,16 @@
             else if (state.budget > 0 && state.balance < state.budget * 0.2) bal.classList.add('warning');
 
             document.getElementById('statBudget').textContent = '¥' + state.budget.toLocaleString();
-            document.getElementById('statSpent').textContent = '¥' + state.spent.toLocaleString();
+
+            // Show spent with percentage if budget exists
+            const spentElem = document.getElementById('statSpent');
+            if (state.budget > 0) {
+                const percent = Math.round((state.spent / state.budget) * 100);
+                spentElem.innerHTML = `¥${state.spent.toLocaleString()} <span style="font-size:10px; color:var(--text-muted);">(${percent}%)</span>`;
+            } else {
+                spentElem.textContent = '¥' + state.spent.toLocaleString();
+            }
+
             document.getElementById('statToday').textContent = '¥' + getTodaySpending().toLocaleString();
 
             const pct = state.budget > 0 ? Math.min((state.spent / state.budget) * 100, 100) : 0;
@@ -1449,6 +1581,94 @@
                     </div>
                 `).join('');
             }
+        }
+
+        // Analysis Modal Functions
+        function openAnalysis() {
+            document.getElementById('analysisModal').classList.add('active');
+
+            // Summary Update
+            document.getElementById('analysisTotal').textContent = '¥' + state.spent.toLocaleString();
+            const percent = state.budget > 0 ? Math.round((state.spent / state.budget) * 100) : 0;
+            document.getElementById('analysisPercent').textContent = `予算比: ${percent}%`;
+
+            renderCategoryRanking();
+            renderDailyTrend();
+        }
+
+        function closeAnalysis() {
+            document.getElementById('analysisModal').classList.remove('active');
+        }
+
+        function renderCategoryRanking() {
+            const container = document.getElementById('categoryRankingChart');
+            const data = getCategorySpending();
+
+            if (data.length === 0) {
+                container.innerHTML = '<div style="text-align:center; color:var(--text-muted); font-size:11px;">データがありません</div>';
+                return;
+            }
+
+            const max = Math.max(...data.map(d => d.amount));
+            const top5 = data.slice(0, 5);
+
+            container.innerHTML = top5.map(item => {
+                const width = (item.amount / max) * 100;
+                return `
+                    <div class="bar-chart-row">
+                        <div class="bar-label">${item.name}</div>
+                        <div class="bar-area">
+                            <div class="bar-fill" style="width: ${width}%"></div>
+                            <div class="bar-value">¥${item.amount.toLocaleString()}</div>
+                        </div>
+                    </div>
+                `;
+            }).join('');
+        }
+
+        function renderDailyTrend() {
+            const container = document.getElementById('dailyTrendChart');
+            const today = new Date();
+            const last7Days = [];
+
+            for (let i = 6; i >= 0; i--) {
+                const day = new Date(today);
+                day.setDate(today.getDate() - i);
+                last7Days.push(day);
+            }
+
+            // Group by date
+            const dailyData = {};
+            last7Days.forEach(d => {
+                dailyData[d.toDateString()] = 0;
+            });
+
+            state.history.forEach(h => {
+                const d = new Date(h.timestamp).toDateString();
+                if (dailyData.hasOwnProperty(d)) {
+                    dailyData[d] += h.amount;
+                }
+            });
+
+            const values = Object.values(dailyData);
+            const max = Math.max(...values, 100); // Minimum scale to avoid empty bars looking weird
+
+            container.innerHTML = last7Days.map(date => {
+                const dStr = date.toDateString();
+                const amount = dailyData[dStr];
+                const width = (amount / max) * 100;
+                const label = date.getDate() === today.getDate() ? '今日' : `${date.getMonth() + 1}/${date.getDate()}`;
+
+                return `
+                    <div class="bar-chart-row">
+                        <div class="bar-label">${label}</div>
+                        <div class="bar-area">
+                            <div class="bar-fill" style="width: ${width === 0 ? 0 : Math.max(1, width)}%"></div>
+                            <div class="bar-value">${amount > 0 ? '¥' + amount.toLocaleString() : ''}</div>
+                        </div>
+                    </div>
+                `;
+            }).join('');
         }
 
         function renderCategoryTabs() {
